# anything2anki

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
src/anything2anki/: __init__.py  __main__.py  anki_model.py  cli.py  constants.py  prompts.py  schemas.py  workflow.py
tests/: test_prompts.py  test_workflow.py
